# compressible

./: .gitignore  README.md  catalog-info.yaml
.github/workflows/: ci.yml  release.yml
go/: compressible.go  compressible_test.go  doc.go  extensions.go  go.mod
js/: README.md  package-lock.json  package.json  tsconfig.json
js/src/: extensions.ts  index.ts
js/test/: compressible.test.ts
rust/: Cargo.toml
rust/src/: extensions.rs  lib.rs
scripts/: gen.go
